--- a/test.html
+++ b/test.html
@@ -19,11 +19,40 @@
 
     />
     <p id="description">image description</p>
-    <a href="javascript:popUp('https://www.baidu.com')">TEST</a>
-    <a href="https://www.baidu.com" onclick="popUp(this.getAttribute('href')); return false;">百度</a>
+    <a id="baidu">百度</a>
     <button >Click me to Sina</button>
     <div id="blank_text"></div>
-    <script type="text/javascript" src="demo.js">
-    </script>
+    <abbr></abbr>
+    <blockquote cite="http://www.sina.com.cn">
+        <p>
+            A website for some news and weibo or something like that.
+        </p>
+    </blockquote>
+    <table>
+        <caption>Qribbble</caption>
+        <thead>
+            <tr>
+                <th>when</th>
+                <th>where</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>June 9th</td>
+                <td>Porland, <abbr title="Oregon">OR</abbr></td>
+            </tr>
+            <tr>
+                <td>June 10th</td>g
+                <td>Seattle, <abbr title="Washiton">WA</abbr></td>
+            </tr>
+            <tr>
+                <td>June 12th</td>
+                <td>Sacramento, <abbr title="California">CA</abbr></td>
+            </tr>
+        </tbody>
+    </table>
+    <script type="text/javascript" src="demo.js"></script>
+    <script type="text/javascript" src="getHttpObject.js"></script>
+    <script type="text/javascript" src="getNewContent.js"></script>
 </body>
 </html>
